# camada-aplicacao-http

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Cmakelists.txt  Platform.cpp  Platform.hpp  README.md  RequestHandler.cpp  RequestHandler.hpp  UnixPlatform.cpp  UnixPlatform.hpp  WindowsPlatform.cpp  WindowsPlatform.hpp  server.cpp
public/: 404.html  index.html  trouxiane.txt
